# datacat

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/datacat-admin/: Cargo.toml
crates/datacat-admin/src/: api.rs  license.rs  main.rs  state.rs  tenant.rs
crates/datacat-alerting/: Cargo.toml
crates/datacat-alerting/src/: api.rs  evaluator.rs  incident.rs  main.rs  monitor.rs  notifier.rs
crates/datacat-api/: Cargo.toml
crates/datacat-api/src/: auth.rs  main.rs  routes.rs
crates/datacat-collector/: Cargo.toml
crates/datacat-collector/src/: grpc.rs  http.rs  main.rs  producer.rs  profiling.rs  statsd.rs
crates/datacat-common/: Cargo.toml
crates/datacat-common/src/: lib.rs
crates/datacat-ingester/: Cargo.toml
crates/datacat-ingester/src/: consumer.rs  logs_writer.rs  main.rs  metrics_writer.rs  profiling_writer.rs  writer.rs
crates/datacat-insights/: Cargo.toml
crates/datacat-insights/src/: anomaly.rs  api.rs  chat.rs  main.rs  patterns.rs  state.rs
crates/datacat-proto/: Cargo.toml  build.rs
crates/datacat-proto/src/: lib.rs
crates/datacat-query/: Cargo.toml
crates/datacat-query/src/: log_metrics.rs  logs.rs  main.rs  metrics.rs  profiling.rs  xview.rs
crates/datacat-schema/: Cargo.toml
crates/datacat-schema/src/: lib.rs
deploy/: Dockerfile.admin  Dockerfile.alerting  Dockerfile.api  Dockerfile.collector  Dockerfile.ingester  Dockerfile.insights  Dockerfile.query  Dockerfile.web  docker-compose.yml  nginx.conf
deploy/clickhouse/: config.xml  init.sql
deploy/collector/: config.yaml
deploy/docker/: docker-compose.otel.yml  otel-collector-config.yaml
deploy/helm/datacat/: Chart.yaml  values.yaml
deploy/helm/datacat/templates/: NOTES.txt  _helpers.tpl  configmap-clickhouse-init.yaml  deployments.yaml  ingress.yaml
deploy/helm/datacat/templates/clickhouse/: configmap.yaml  secret.yaml  service.yaml  statefulset.yaml
deploy/helm/datacat/templates/datacat-api/: deployment.yaml  service.yaml
deploy/helm/datacat/templates/redpanda/: service.yaml  statefulset.yaml
deploy/kubernetes/: install.sh  instrumentation.yaml  otelcollector.yaml
deploy/scripts/: install.sh  profiling-sender.sh
docs/: 00-master-plan.md
docs/rfcs/: RFC-001-clickhouse-schema.md  RFC-002-tag-model.md  RFC-003-multitenancy.md  RFC-004-internal-wire.md
samples/java-spring/: README.md  pom.xml
samples/java-spring/src/main/java/io/datacat/: SampleApp.java
samples/java-spring/src/main/resources/: application.properties
scripts/: demo-checklist.sh  dev.sh  quickstart.sh  verify-stack.sh
tools/bench/: bench_ingest.sh  bench_xview.sh
tools/load-generator/: generate.py  requirements.txt
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts
web/src/components/Chart/: LineChart.tsx
web/src/components/Dashboard/: Dashboard.tsx  MetricsDashboard.tsx
web/src/components/Insights/: InsightsView.tsx
web/src/components/Landing/: LandingPage.tsx
web/src/components/LogMetrics/: LogMetricsView.test.tsx  LogMetricsView.tsx
web/src/components/Logs/: LogsView.tsx
web/src/components/MetricsExplorer/: MetricsExplorer.test.tsx  MetricsExplorer.tsx
web/src/components/Profiling/: FlamegraphRenderer.tsx  ProfilingView.tsx
web/src/components/TransactionTable/: TransactionTable.tsx
web/src/components/XView/: XView.tsx  XViewInteraction.ts  XViewRenderer.ts  types.ts
web/src/components/ui/: Sidebar.tsx  TopBar.tsx
web/src/hooks/: useMetrics.ts  useXView.ts
web/src/styles/: global.css
web/src/test/: setup.ts
