[package]
name = "datacat-admin"
description = "Tenant management & license validation service (port 9092)"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datacat-admin"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
base64 = "0.22"
