[package]
name = "datacat-api"
description = "REST/gRPC API Gateway (axum) — 외부 클라이언트 진입점"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "datacat-api"
path = "src/main.rs"

[dependencies]
datacat-common = { path = "../datacat-common" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
bytes = { workspace = true }
