[package]
name = "datacat-collector"
description = "OTLP gRPC/HTTP 수신기 — 1M spans/s 목표"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "datacat-collector"
path = "src/main.rs"

[dependencies]
# workspace 내부 crate
datacat-proto = { path = "../datacat-proto" }
datacat-common = { path = "../datacat-common" }

# async runtime
tokio = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# HTTP
hyper = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Kafka/Redpanda producer
rdkafka = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Config
config = { workspace = true }

# OTLP proto (collector service 트레이트)
opentelemetry-proto = { version = "0.31", features = ["gen-tonic-messages", "with-serde"] }

# Phase 4: pprof payload Base64 인코딩
base64 = "0.22"
